--- a/Conhecimentos.html
+++ b/Conhecimentos.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-
 <body>
-    <section class="left">
-        <img class="eu" src="./images/Eu.jpg" alt="" srcset="">
-        <section class="text1">
-
+    <main>
+        <section class="right"> 
+            <img class="foto" src="./images/328707740_967706687543232_2851285078625167998_n.jpg" alt="">
             <a href="./index.html">Sobre</a>
-
             <a href="./conhecimentos.html">Conhecimentos</a>
-
             <a href="./objetivos.html">Objetivos</a>
-
         </section>
-    </section>
-
-    <section class="right">
-        <ol class="space">
-            <h1>Conhecimentos</h1>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Escrita Criativa</li>
-        </ol>
-        
-
-    </section>
-
+        <section class="left">
+            <h1>Conhecimentos</h1> 
+            <ol class="space">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Escrita Criativa</li>
+            </ol>
+        </section>
+    </main>
 </body>
-
 </html>
