--- a/Objetivos.html
+++ b/Objetivos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,30 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="left">
-        <img class="eu" src="./images/Eu.jpg" alt="" srcset="">
-        <section class="text1">
-
+    <main>
+        <section class="right"> 
+            <img class="foto" src="./images/328707740_967706687543232_2851285078625167998_n.jpg" alt="">
             <a href="./index.html">Sobre</a>
-
             <a href="./conhecimentos.html">Conhecimentos</a>
-
             <a href="./objetivos.html">Objetivos</a>
-
         </section>
-    </section>
-
-    <section class="right">
-        <ul class="space">
-            <h1>Objetivos</h1>
-            <li>Ingressar nessa área do mercado de trabalho.</li>
-            <li>Me tornar um excelente profissional da área.</li>
-            <li>Possuir uma renda estável.</li>
-            <li>Desenvolver meus próprios projetos.</li>
-        </ul>
-        
-
-    </section>
-        
+        <section class="left">
+            <h1>Objetivos</h1> 
+            <ul class="space">
+              <li> Ingressar nessa área do mercado de trabalho.</li> 
+              <li>Me tornar um excelente profissional da área.</li>  
+              <li>Possuir uma renda estável.</li>  
+              <li>Desenvolver meus próprios projetos.</li>  
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
